openwebrx (1.2.59) bullseye jammy; urgency=low

  * Added copyright-free Mirics driver for SDRPlay and clones.
  * Fixed OpenWebRX startup failure if MQTT connection fails.
  * Volume control is now logarithmic, in -55db to +5db range.
  * Added Aircraft Emergency Frequency bookmark.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 27 May 2024 16:12:00 +0000

openwebrx (1.2.58) bullseye jammy; urgency=low

  * Added MQTT reporting of SDR profile and status changes.
  * SDR changes reported via "openwebrx/RX" MQTT topic.
  * Decodes reported via "openwebrx/<mode>" MQTT topics.  
  * Fixed background PAGE decoding with a workaround.
  * Fixed Selector API errors when withSquelch=False.
  * Switched PAGE decoders to millisecond timestamps.
  * Switched PAGE and ISM file recording to JSON.
  * Separated FLEX baud rate from channel number.
  * Made relevant PAGE JSON fields integer.
  * Cleaned up TextParser, PAGE, and ISM decoders.
  * Added debug code to print module chains.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 6 May 2024 16:12:00 +0000

openwebrx (1.2.57) bullseye jammy; urgency=low

  * Added user-selectable waterfall color themes.
  * Added initial data to all aircraft MQTT reports.
  * Added current frequency to all reported JSON data.
  * Stopped adding secondary offset if there is no selector.
  * Switched all JSON timestamps to milliseconds.
  * Moved waterfall functions outside openwebrx.js.
  * Moved UI and utility functions outside openwebrx.js.
  * Refactored aircraft mode parsers.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 29 Apr 2024 16:12:00 +0000

openwebrx (1.2.56) bullseye jammy; urgency=low

  * Added character set setting for the pager messages.
  * Added more default profiles to a new SDRPlay device.
  * Added bookmarks for MURS frequencies.
  * Fixed HTML formatting issue in the Feature Report.
  * Fixed exception trying to report filtered pager messages.
  * Moved Multimon, DumpHFDL, DumpVDL2 decoders to ExecModule.