@@ -359,5 +359,6 @@ defaultConfig = PropertyLayer(
     fax_color=False,
     fax_am=False,
     cw_showcw=False,
-    dsc_show_errors=True
+    dsc_show_errors=True,
+    gps_updates=False
 ).readonly()
