@@ -1,5 +1,6 @@
 openwebrx (1.2.59) bullseye jammy; urgency=low
 
+  * Added optional receiver location updates via GPSD.
   * Added copyright-free Mirics driver for SDRPlay and clones.
   * Fixed OpenWebRX startup failure if MQTT connection fails.
   * Volume control is now logarithmic, in -55db to +5db range.
